--- a/web/views/header.ejs
+++ b/web/views/header.ejs
@@ -12,7 +12,13 @@
     </ul>
     <ul>
       <% if (user) { %>
-      <li>Logged in as <a href="/users/<%= user.id %>"><%= user.name %></a></li>
+      <li>
+        Logged in as
+        <a href="/users/<%= user.id %>">
+          <%- user.identicon -%>
+          <%= user.name %>
+        </a>
+      </li>
       <li>
         <a href="/logout"><button>Log out</button></a>
       </li>
