--- a/web/public/style.css
+++ b/web/public/style.css
@@ -62,3 +62,8 @@ article > svg {
   width: 200px;
   height: 200px;
 }
+.centered-large-text {
+  font-size: 1.2rem;
+  text-align: center;
+  margin: auto;
+}
