web: add pagination for posts

--- a/web/views/header.ejs
+++ b/web/views/header.ejs
@@ -4,6 +4,12 @@
       <li>
         <h1><a href="/"><%= siteName %></a></h1>
       </li>
+      <li>
+        <a href="/">hot</a>
+      </li>
+      <li>
+        <a href="/new">new</a>
+      </li>
       <% if (user) { %>
       <li>
         <a href="/newpost"><button>New post</button></a>
